# galax_robot

./: .gitmodules  README.md  how_to_fix_inner_arduino.md
ISR_Div/: ISR_Div.ino
galax_bringup/: CMakeLists.txt  package.xml
galax_bringup/config/: controller_config.yaml  twist_mux.yaml
galax_bringup/launch/: joy_real_robot.launch.py  keyboard_real_robot.launch.py  keyboard_sim_robot.launch.py  launch_real_robot.launch.py  launch_sim_robot.launch.py  robot_state_publisher.launch.py  view_robot.launch.py
galax_bringup/rviz/: robot_display.rviz  view_robot.rviz
galax_bringup/urdf/: galax.urdf.xacro  galax2.urdf.xacro
galax_bringup/worlds/: corridor.world  corridor2.world  empty.world  empty_corridor.world  test.world  test0.world  test1.world  test2.world  test3.world  world3
galax_bringup/worlds/world2/: model.sdf
galax_description/: CMakeLists.txt  package.xml
galax_description/config/: controller_config.yaml  controller_config_real.yaml
galax_description/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
galax_description/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py  view_robot.launch.py
galax_description/rviz/: view_robot.rviz
galax_description/urdf/: galax.urdf.xacro  galax_robot.urdf.xacro  gazebo_control.xacro  pioneer3dx.urdf.xacro  pioneer3dx_sim.urdf.xacro
path_planning_package/: CMakeLists.txt  README.md  package.xml
path_planning_package/include/minimal_service/: path_planner_class.hpp
path_planning_package/include/path_planning_package/: goal_receiver_class.hpp  path_planner_class.hpp
path_planning_package/launch/: path_planning_service_cpp.launch.py
path_planning_package/src/: goal_receiver_class.cpp  path_planner_class.cpp  path_planner_node.cpp
